--- a/releng/configuration/pom.xml
+++ b/releng/configuration/pom.xml
@@ -5,19 +5,15 @@
 	<artifactId>configuration</artifactId>
 	<version>1.0.0</version>
 	<packaging>pom</packaging>
-
 	<properties>
-		<tycho.version>3.0.3</tycho.version>
+		<tycho.version>3.0.4</tycho.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
 		<eclipse.p2.mirrors>false</eclipse.p2.mirrors>
-
 		<timestamp>${maven.build.timestamp} UTC</timestamp>
 		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
 	</properties>
-
-
 	<build>
 		<pluginManagement>
 			<plugins>
@@ -26,7 +22,6 @@
 					<artifactId>tycho-p2-director-plugin</artifactId>
 					<version>${tycho.version}</version>
 				</plugin>
-
 				<plugin>
 					<groupId>org.eclipse.tycho</groupId>
 					<artifactId>tycho-compiler-plugin</artifactId>
@@ -38,7 +33,6 @@
 						<strictCompilerTarget>true</strictCompilerTarget>
 					</configuration>
 				</plugin>
-
 			</plugins>
 		</pluginManagement>
 		<plugins>
@@ -47,7 +41,6 @@
 				<artifactId>tycho-p2-director-plugin</artifactId>
 				<version>${tycho.version}</version>
 			</plugin>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
@@ -62,27 +55,10 @@
 						</goals> </execution> -->
 				</executions>
 			</plugin>
-
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-packaging-plugin</artifactId>
 				<version>${tycho.version}</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.eclipse.tycho.extras</groupId>
-						<artifactId>tycho-buildtimestamp-jgit</artifactId>
-						<version>${tycho.version}</version>
-					</dependency>
-				</dependencies>
-				<configuration>
-					<timestampProvider>jgit</timestampProvider>
-					<jgit.ignore>pom.xml</jgit.ignore>
-					<jgit.dirtyWorkingTree>ignore</jgit.dirtyWorkingTree>
-
-					<!-- Include files where expanded macros in plugin properties -->
-					<!-- <additionalFileSets> <fileSet> <directory>${project.build.directory}</directory> 
-						<includes> <include>plugin*.properties</include> </includes> </fileSet> </additionalFileSets> -->
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -103,36 +79,32 @@
 				<artifactId>target-platform-configuration</artifactId>
 				<version>${tycho.version}</version>
 				<configuration>
-<!--					<target>
+					<target>
 						<artifact>
 							<groupId>tycho-test</groupId>
-							<artifactId>target</artifactId>
+							<artifactId>j17-target</artifactId>
 							<version>1.0.0</version>
 						</artifact>
 					</target>
--->					<environments>
+					<environments>
 						<environment>
 							<os>win32</os>
 							<ws>win32</ws>
 							<arch>x86_64</arch>
 						</environment>
 					</environments>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>com.github.spotbugs</groupId>
-				<artifactId>spotbugs-maven-plugin</artifactId>
-				<version>3.1.3</version>
-				<configuration>
-					<effort>Max</effort>
-					<threshold>Low</threshold>
-					<failOnError>false</failOnError>
+					<dependency-resolution>
+						<extraRequirements>
+							<requirement>
+								<type>eclipse-plugin</type>
+								<id>j17-jaxws-fragment</id>
+								<versionRange>0.0.0</versionRange>
+							</requirement>
+						</extraRequirements>
+					</dependency-resolution>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-
 	<description>Based on https://www.vogella.com/tutorials/EclipseTycho/article.html#exercise-configuring-a-tycho-build-for-a-rcp-application</description>
 </project>
-
-
