--- a/releng/configuration/pom.xml
+++ b/releng/configuration/pom.xml
@@ -36,12 +36,28 @@
 			</plugins>
 		</pluginManagement>
 		<plugins>
-			<plugin>
+<!--			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-p2-director-plugin</artifactId>
 				<version>${tycho.version}</version>
+				<executions>
+					<execution>
+						<id>create-distributions</id>
+						<goals>
+							<goal>materialize-products</goal>
+							<goal>archive-products</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<products>
+						<product>
+							<id>test-j17-product</id>
+						</product>
+					</products>
+				</configuration>
 			</plugin>
-			<plugin>
+-->			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
 				<version>2.6</version>
